# catfig

./: .gitignore  CMakeLists.txt  TestFile.cf
catfig/Source/: Catfig.h  CatfigTokenizer.c  Test.c
test/Source/: Main.c
